--- a/app/views/alarm_notifications/index.html.haml
+++ b/app/views/alarm_notifications/index.html.haml
@@ -22,7 +22,7 @@
                       %td.small-cell.v-align-middle= check_box_tag "alarm_notification_ids[]", alert.id, nil , class: "alarm_notification_checkbox"
                       %td= link_to alert.try(:car).try(:name), alert.car
                       %td= link_to alert.try(:alarm).try(:name), alert.alarm
-                      %td= alert.created_at
+                      %td= "#{pretty_date(alert.created_at)} at #{pretty_time(alert.created_at)}"
 
 
 #quick-access.admin-bar{:style => "bottom: -115px;"}
