--- a/app/views/work_schedules/show.html.haml
+++ b/app/views/work_schedules/show.html.haml
@@ -3,9 +3,9 @@
     .page-title
       = link_to raw("<i class='icon-custom-left'></i>"), work_schedules_path
       %h3
-         Work Schedule Group  
+        Work Schedule Group  
   .col-md-4.col-lg-4.col-sm-4.col-xs-4 
-    .pull-right= link_to 'Edit', edit_work_schedule_path(@work_schedule), class: "btn btn-success"
+    /.pull-right= link_to 'Edit', edit_work_schedule_path(@work_schedule), class: "btn btn-success"
 
 
 .row
@@ -16,7 +16,14 @@
           %b Name:
           = @work_schedule.name
         .form-group
-          - @work_schedule.work_hours.each do |work_hour|
-            = work_hour.day_of_week
-            = work_hour.starts_at
-            = work_hour.ends_at
+          %table.table
+            %thead
+              %tr 
+                %td= "Day of week"
+                %td= "Start hour"
+                %td= "End Hour"
+            - @work_schedule.work_hours.each do |work_hour|
+              %tr
+                %td= work_hour.day_of_week
+                %td= work_hour.starts_at
+                %td= work_hour.ends_at
