Reorganized left menu

--- a/app/views/cars/index.html.haml
+++ b/app/views/cars/index.html.haml
@@ -6,7 +6,7 @@
           Vehicles
     .col-md-4.col-lg-4.col-sm-4.col-xs-4 
       .pull-right
-        = link_to 'Filter', "#", class: "btn btn-default toggle"
+        = link_to 'Toggle filters', "#", class: "btn btn-default toggle"
         = link_to 'Create', new_car_path, class: "btn btn-success"
         
 
