--- a/app/views/layouts/_menu.html.haml
+++ b/app/views/layouts/_menu.html.haml
@@ -22,7 +22,7 @@
 
   %li
     %a{:href => "javascript:;"}
-      = fa_icon "gears"
+      = fa_icon "th-list"
       %span.title Administration
       %span.arrow
     %ul.sub-menu
