--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -1,24 +1,26 @@
-.page-title
-  %h3
-    Vehicles (Live)
-.row
-  .col-lg-8.col-md-12.col-sm-12.col-xs-12{style: "margin-bottom:10px"}
-    %div#cars_index{ :style => "width: 100%; height: 400px;"}
-  .col-lg-4.col-md-12.col-sm-12.col-xs-12
-    .grid.simple
-      .grid-title
-        %h4
-          = "Vehicles (#{Car.count})" 
-        .tools
-          %a.collapse{href: "javascript:;"}
-      .grid-body 
-        - @positions.each do |position|
-          .notification-messages.info
-            .message-wrapper
-              .heading= link_to "#{position.try(:car).try(:name)}", position.car
-              .description= position.try(:location).try(:address)
-              .date.pull-left= "Last seen : #{time_ago_in_words(position.time)} ago"
-            .clearfix
+.page-content
+  .content{ :style => "padding-left: 0px; padding-right: 0px; padding-top: 61px;"}
+    - if notice
+      %p.alert.alert-notice= notice
+    - if alert
+      %p.alert.alert-error= alert
+    / BEGIN PlACE PAGE CONTENT HERE
+    %div#cars_index{ :style => "width: 100%; height: 700px;"}
+  / .col-lg-3.col-md-12.col-sm-12.col-xs-12
+  /   .grid.simple
+  /     .grid-title
+  /       %h4
+  /         = "Vehicles (#{Car.count})" 
+  /       .tools
+  /         %a.collapse{href: "javascript:;"}
+  /     .grid-body 
+  /       - @positions.each do |position|
+  /         .notification-messages.info
+  /           .message-wrapper
+  /             .heading= link_to "#{position.try(:car).try(:name)}", position.car
+  /             .description= position.try(:location).try(:address)
+  /             .date.pull-left= "Last seen : #{time_ago_in_words(position.time)} ago"
+  /           .clearfix
           
 
 
