Implement separate vehicle positions history

--- a/app/views/users/index.html.haml
+++ b/app/views/users/index.html.haml
@@ -38,9 +38,9 @@
                 - @users.each do |user|
                   %tr
                     %td.small-cell.v-align-middle= check_box_tag "user_ids[]", user.id, nil , class: "user_checkbox"
-                    %td= link_to user.name, user
+                    %td= link_to user.name.titleize, user
                     %td= user.email
-                    %td= user.roles.to_a.map{ |role| role.capitalize }.join(', ')
+                    %td= user.roles.to_a.map(&:capitalize).join(', ')
                     %td= link_to 'Edit', edit_user_path(user)
                     - if ! user.id == current_user.id 
                       %td= link_to 'Destroy', user, :method => :delete, :data => { :confirm => 'Are you sure?' }
