--- a/app/assets/stylesheets/template/style.css.scss
+++ b/app/assets/stylesheets/template/style.css.scss
@@ -1240,11 +1240,20 @@ body.menu-non-fixed .page-sidebar {
 }
 
 .page-content .content {
+  padding-left: 26px;
+  padding-right: 26px;
   padding-top: 83px;
 }
+
 .with-padding{
   padding-left: 26px;
   padding-right: 26px;
+}
+
+.without-padding{
+  padding-left: 0px !important;
+  padding-right: 0px !important;
+  padding-top: 61px !important;
 }
 
 .inner-menu {
