--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -1,5 +1,5 @@
 .page-content
-  .content{ :style => "padding-left: 0px; padding-right: 0px; padding-top: 61px;"}
+  .content.without-padding
     - if notice
       %p.alert.alert-notice= notice
     - if alert
