--- a/app/views/regions/_form.html.haml
+++ b/app/views/regions/_form.html.haml
@@ -16,7 +16,7 @@
 						.col-md-12
 							.pull-right
 								= text_field_tag :address
-								%input{ :type=>"button", :value => "Search", :id => "repan_map" , :class => "btn btn-primary"}
+								%input{ :type=>"button", :value => "Search", :id => "repan_map" , :class => "btn btn-success"}
 
 				.form-group
 					#map_canvas
