--- a/app/views/layouts/_menu.html.haml
+++ b/app/views/layouts/_menu.html.haml
@@ -69,7 +69,7 @@
     %li
       %a{:href => "javascript:;"}
         = fa_icon "gears"
-        %span.title Advanced
+        %span.title Trackman
         %span.arrow
       %ul.sub-menu
         %li= link_to "Companies", companies_path
