--- a/app/assets/javascripts/controllers/cars/helpers/all_cars.coffee.erb
+++ b/app/assets/javascripts/controllers/cars/helpers/all_cars.coffee.erb
@@ -32,7 +32,6 @@ class DetailedMarkerBuilder extends Gmaps.Google.Builders.Marker
             handler.buildMap { provider: { scrollwheel: false }, internal: { id: gon.map_id }}, ->
                 #markers = handler.addMarkers(gon.data)
 
-                console.log("Loaded vehicles")
                 console.log(gon.data)
 
                 for one_marker, i in gon.data
@@ -42,11 +41,10 @@ class DetailedMarkerBuilder extends Gmaps.Google.Builders.Marker
                     if vehicle[1] == ""
                         vehicle[1] = "No Driver"
 
-                    console.log("Loaded one vehicle")
-
                     pin = "<img width='36px' height='36px' src='<%= image_path('red_pin.png') %>'>"
                     
-                    content = "<div class='map-tooltip' ><p>"+ vehicle[0] + "</p><p>" + vehicle[1] + "</p><p>" + vehicle[2] + "</p></div>" 
+                    content = "<div class='map-tooltip' ><p><b>Numberplate:</b></br>"+ vehicle[0] + 
+                        "</p><p>" + vehicle[1] + "</p><p><b>Last seen:</b><br/>" + vehicle[2] + "</p></div>" 
 
                     
                     marker = handler.addMarker
