--- a/app/assets/stylesheets/cars.css.scss
+++ b/app/assets/stylesheets/cars.css.scss
@@ -1,3 +1,13 @@
 // Place all the styles related to the Cars controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+
+.detailed_infowindow{
+	background-color: white;
+}
+
+.position_infowindow{
+	background-color: white;
+	padding: 10px
+}
