--- a/app/views/invitations/edit.html.erb
+++ b/app/views/invitations/edit.html.erb
@@ -10,5 +10,5 @@
   <p><%= f.label :password_confirmation %><br />
   <%= f.password_field :password_confirmation %></p>
 
-  <p><%= f.submit t("devise.invitations.edit.submit_button") %></p>
+  <p><%= f.submit t("devise.invitations.edit.submit_button"), class: "btn btn-primary" %></p>
 <% end %>
