--- a/app/views/layouts/_menu.html.haml
+++ b/app/views/layouts/_menu.html.haml
@@ -4,67 +4,86 @@
     %a{:href => root_path}
       = fa_icon "home"
       %span.title Home
-  %li
-    %a{:href => alarm_notifications_path}
-      = fa_icon "exclamation-triangle"
-      %span.title 
-        Alerts 
-  %li
-    %a{:href => history_cars_path}
-      = fa_icon "area-chart"
-      %span.title 
-        History
-  %li
-    %a{:href => cars_path}
-      = fa_icon "file-text-o"
-      %span.title 
-        Reports 
 
   %li
     %a{:href => "javascript:;"}
-      = fa_icon "th-list"
-      %span.title Administration
+      = fa_icon "envelope"
+      %span.title Conversations
       %span.arrow
     %ul.sub-menu
       %li
-        %a{:href => cars_path}
-          = fa_icon "truck"
-          %span.title Vehicles
-      %li
-        %a{:href => devices_path}
-          = fa_icon "bullseye"
-          %span.title Devices
-      %li
-        %a{:href => alarms_path}
-          = fa_icon "bullhorn"
-          %span.title Alarms
-      %li
-        %a{:href => work_schedules_path}
-          = fa_icon "calendar"
-          %span.title Work Schedules
-      %li
-        %a{:href => regions_path}
-          = fa_icon "circle"
-          %span.title Regions
+        %a{:href => conversations_path}
+          = fa_icon "inbox"
+          %span.title Inbox
 
       %li
-        %a{:href => simcards_path}
-          = fa_icon "ticket"
-          %span.title Simcards
-      %li
-        %a{:href => users_path}
-          = fa_icon "users"
-          %span.title Employees
-      / %li
-      /   %a{:href => groups_path}
-      /     = fa_icon "sitemap"
-      /     %span.title Alarm Groups
-      / %li
-      /   %a{:href => work_schedule_groups_path}
-      /     = fa_icon "sitemap"
-      /     %span.title Work Schedule Groups
+        %a{:href => sentbox_conversations_path}
+          = fa_icon "folder"
+          %span.title Sentbox
+
+  - if is_manager?(current_user)
+    %li
+      %a{:href => alarm_notifications_path}
+        = fa_icon "exclamation-triangle"
+        %span.title 
+          Alerts 
+    %li
+      %a{:href => history_cars_path}
+        = fa_icon "area-chart"
+        %span.title 
+          History
+  / %li
+  /   %a{:href => cars_path}
+  /     = fa_icon "file-text-o"
+  /     %span.title 
+  /       Reports 
+
+  - if is_manager?(current_user)
+    %li
+      %a{:href => "javascript:;"}
+        = fa_icon "th-list"
+        %span.title Administration
+        %span.arrow
+      %ul.sub-menu
+        %li
+          %a{:href => cars_path}
+            = fa_icon "truck"
+            %span.title Vehicles
+        %li
+          %a{:href => devices_path}
+            = fa_icon "bullseye"
+            %span.title Devices
+        %li
+          %a{:href => alarms_path}
+            = fa_icon "bullhorn"
+            %span.title Alarms
+        %li
+          %a{:href => work_schedules_path}
+            = fa_icon "calendar"
+            %span.title Work Schedules
+        %li
+          %a{:href => regions_path}
+            = fa_icon "circle"
+            %span.title Regions
+
+        %li
+          %a{:href => simcards_path}
+            = fa_icon "ticket"
+            %span.title Simcards
+        %li
+          %a{:href => users_path}
+            = fa_icon "users"
+            %span.title Employees
+        / %li
+        /   %a{:href => groups_path}
+        /     = fa_icon "sitemap"
+        /     %span.title Alarm Groups
+        / %li
+        /   %a{:href => work_schedule_groups_path}
+        /     = fa_icon "sitemap"
+        /     %span.title Work Schedule Groups
   
-  - if current_user && current_user.has_role?(:admin)
+  - if is_admin?(current_user)
     / BEGIN TWO LEVEL MENU
     %li
       %a{:href => "javascript:;"}
