--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -1,22 +1,110 @@
+%br/
+%br/
+%br/
+%br/
+
 .page-content
-  .content.without-padding
-    %div#cars_index{ :style => "width: 100%; height: 700px;"}
-  / .col-lg-3.col-md-12.col-sm-12.col-xs-12
-  /   .grid.simple
-  /     .grid-title
-  /       %h4
-  /         = "Vehicles (#{Car.count})" 
-  /       .tools
-  /         %a.collapse{href: "javascript:;"}
-  /     .grid-body 
-  /       - @positions.each do |position|
-  /         .notification-messages.info
-  /           .message-wrapper
-  /             .heading= link_to "#{position.try(:car).try(:name)}", position.car
-  /             .description= position.try(:location).try(:address)
-  /             .date.pull-left= "Last seen : #{time_ago_in_words(position.time)} ago"
-  /           .clearfix
-          
+
+  .col-md-12
+
+    .col-md-12.no-padding
+      .grid.simple.grid-no-mbot.sin-border
+        .grid-body.mi-padding.no-border.border-bot.grid-without-title
+          %form{:class => "form-no-horizontal-spacing"}
+            %div.row.column-seperation
+
+              %div.col-md-5.col-md-offset-1
+
+                %div.row.form-row
+                  %div.col-md-6
+                    %div.input-append.success.date.no-padding
+                      %div.form-group
+                        %div
+                          %input{:type => "text", :class => "datepicker form-control", :placeholder => "Start Date"}/
+                          %span.add-on
+                            %span.arrow
+                            %i.fa.fa-calendar
+
+                  %div.col-md-5
+                    %div.input-append.success.date.no-padding
+                      %div.form-group
+                        %div
+                          %input{:type => "text", :placeholder => "Time", :data => {:provide => "timepicker", :maxHours => "24"}, :class => "timepicker start-time form-control"}/
+                          %span.add-on
+                            %span.arrow
+                            %i.fa.fa-clock-o
+
+              %div.col-md-5
+
+                %div.row.form-row
+                  %div.col-md-6
+                    %div.input-append.success.date.no-padding
+                      %div.form-group
+                        %div
+                          %input{:type => "text", :class => "datepicker form-control", :placeholder => "End Date"}/
+                          %span.add-on
+                            %span.arrow
+                            %i.fa.fa-calendar
+
+                  %div.col-md-5
+                    %div.input-append.success.date.col-md-10.no-padding
+                      %div.form-group
+                        %div
+                          %input{:type => "text", :placeholder => "Time", :data => {:provide => "timepicker", :maxHours => "24"}, :class => "timepicker end-time form-control"}/
+                          %span.add-on
+                            %span.arrow
+                            %i.fa.fa-clock-o
+
+    .col-md-6.map.no-padding{ :style => "width: 50%;" }
+      .grid.simple.h-scroll.sin-border
+        .grid-title.no-border
+          %span
+            %h4{style: "width:auto; padding-right:10px;"} Map
+            %span.text-primary.map-title Showing all vehicles
+          .tools
+            %a.config.sizeMapFull-icon{style: "cursor:pointer;"}
+              %i.fa.fa-arrows-h.fa-lg
+        .grid-body.no-border{:style => "padding:0px;"}
+          %div#cars_index{ :style => "width: 100%; height: 400px;"}
+
+    .col-md-6.overview.no-padding{ :style => "width: 50%;" }
+      .grid.simple.h-scroll.dragme
+        .grid-title.border-only-bot
+          %h4 Overview
+          .tools
+            %a.collapse{href: "javascript:;"}
+        .grid-body.no-border{:style => "padding:0px;"}
+          %table.table.mi-size
+            %thead
+              %tr
+                %th Type
+                %th Vehicle
+                %th Info
+                %th Location
+                %th Last Seen
+                %th Speed
+            %tbody
+
+              -@positions.each do |position|
+                %tr
+                  %td= position.car.car_type.name
+                  %td.heading= link_to "#{position.try(:car).try(:name)}", '#', {class: 'show_logbook', data: {car_id: position.car.id, car_name: position.car.name}}
+                  %td= position.car.numberplate
+                  %td.description= truncate(position.try(:address), :length => 40)
+                  %td.date= "#{time_ago_in_words(position.time)} ago"
+                  %td= "#{position.speed} km/h"
+
+    .col-md-12.no-padding
+      .grid.simple.h-scroll.dragme
+        .grid-title
+          %h4#logbook
+            = "Log Book"
+          .tools
+            %a.collapse{href: "javascript:;"}
+        .grid-body#logbook_render{:style => "padding:0px;"}
+          %h6{style: "margin-left: 20px; padding: 5px 0px;"} No car selected
+
+
 
 
 
